Opened 2 months ago

Closed 2 months ago

#19381 closed bug (fixed)

Find Query app no longer allows you to open file location

Reported by: shaka Owned by: jscipione
Priority: normal Milestone: Unscheduled
Component: Applications/Tracker Version: R1/Development
Keywords: Cc: jscipione
Blocked By: Blocking:
Platform: All

Description

Previously the Find Query window would allow you to open a files location by clicking on its path in the location column.This no longer works.

As a side note, in general the Query app (one of the best features of Haiku/BeOS) is no longer as responsive as it once was. Perhaps some of the recent changes should be looked at again.

Change History (11)

comment:1 by waddlesplash, 2 months ago

Component: - GeneralApplications/Tracker

comment:2 by waddlesplash, 2 months ago

This still works for me, I can double-click the path and a new window opens.

comment:3 by shaka, 2 months ago

I'm using hrev58562 x64

comment:4 by waddlesplash, 2 months ago

I'm also on a recent nightly.

comment:5 by shaka, 2 months ago

I can confirm it worked in hrev58552 and not now in hrev58562

Last edited 2 months ago by shaka (previous) (diff)

comment:6 by waddlesplash, 2 months ago

Cc: jscipione added

I guess jscipione's changes may somehow be to blame.

comment:7 by jscipione, 2 months ago

Owner: changed from nobody to jscipione
Status: newin-progress
Version: R1/beta5R1/Development

comment:8 by shaka, 2 months ago

ALso, you cannot edit a query and search again anymore. (I.E. CTRL+G)

comment:9 by jscipione, 2 months ago

You can edit a query and search again but you have to have the queries you want to search again selected in the queries folder, and AFAIK that has always been the case. Command+G (typically Alt but I guess you switched that to Ctrl) works in that case. Do you have a specific example how triggering edit queries is not working?

Double clicking the Location in Queries window to open however does in fact not work, that I'm still investigating.

comment:11 by waddlesplash, 2 months ago

Resolution: fixed
Status: in-progressclosed

Fix merged in hrev58586.

Note: See TracTickets for help on using tickets.